making it generic

--- a/src/component/dynamicForm/FormGenerator.css
+++ b/src/component/dynamicForm/FormGenerator.css
@@ -9,6 +9,6 @@
 }
 .form-button-container{
     margin-top: 2rem;
-    display: flex;
+    display: inline-block;
     justify-content: space-evenly;
 }
